# ffhuman

./: Cargo.toml  EXAMPLES.md  FEATURES.md  LICENSE.md  README.md
.github/: CODE_SIGNING_SETUP.md  NOTARIZATION_SETUP.md
.github/workflows/: release.yml
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs
src/assets/: concat_list.txt
src/commands/: analysis.rs  audio.rs  batch.rs  combine.rs  compress.rs  convert.rs  doctor.rs  effects.rs  metadata.rs  mod.rs  pipeline.rs  template.rs  trim.rs  watch.rs  workflow.rs
src/commands/video/: extract.rs  filter.rs  mod.rs  overlay.rs  settings.rs  split.rs  transform.rs
src/ffmpeg/: mod.rs  probe.rs  recipes.rs  runner.rs  step.rs
src/model/: intent.rs  mod.rs  types.rs
src/util/: mod.rs  output.rs  system.rs
tests/: integration_tests.rs
