[package]
name = "ffhuman"
version = "0.1.0"
edition = "2021"

[lib]
name = "ffhuman"
path = "src/lib.rs"

[[bin]]
name = "ffhuman"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
notify = "6.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"